tests/baselines/reference/objectLitStructuralTypeMismatch.errors.txt
tests/cases/compiler/objectLitStructuralTypeMismatch.ts(2,27): error TS2322: Type '{ b: 数字; }' is not assignable to type '{ a: 数字; }'.
  Object literal may only specify known properties, and 'b' does not exist in type '{ a: 数字; }'.


==== tests/cases/compiler/objectLitStructuralTypeMismatch.ts (1 errors) ====
    // Shouldn't compile
    var x: { a: number; } = { b: 5 };
                              ~~~~
!!! error TS2322: Type '{ b: 数字; }' is not assignable to type '{ a: 数字; }'.
!!! error TS2322:   Object literal may only specify known properties, and 'b' does not exist in type '{ a: 数字; }'.